Update Lua from 5.1 to 5.2
This issue was migrated from bug 7400 in our old bug tracker.
Original bug information:
Reporter: Tony Trinh
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: 1.8.0
Attachments:
bug7400.patch: Patch fixes Lua 5.2 panic problem
wslua_1.patch: Update Lua-C API calls to Lua 5.2
wslua_2.patch: Update autoconf script to check for Lua 5.2
wslua_3.patch: Replace HAVE_LUA_5_1 with HAVE_LUA