ui/gtk/main_menubar.c
@@ -3708,7 +3708,7 @@ make_menu_xml(const char *path) {
  * Creates an action group for the menu items in xpath, and returns it. The caller should
  * use g_object_unref() on the returned pointer if transferring scope.
  */
-#ifdef HAVE_LUA_5_1
+#ifdef HAVE_LUA
 /* NOTE currently only used from Lua, remove this ifdef when used
   outside of #ifdef LUA */
 static GtkActionGroup*
@@ -3797,7 +3797,7 @@ make_menu_actions(const char *path, const menu_item_t *menu_item_data) {
 static void
 merge_lua_menu_items(GList *merge_lua_menu_items_list _U_)
 {
-#ifdef HAVE_LUA_5_1
+#ifdef HAVE_LUA
     guint merge_id;
     GtkActionGroup *action_group;
     menu_item_t *menu_item_data;
